Fabrica de conexões usando cache em memória.
