# app/api/swagger/swagger.yaml
@@ -54,6 +54,10 @@ paths:
       description: 'Recupera dados de usuários'
       operationId: getUsuarios
       parameters: 
+      - in: header
+        name: usuarioId
+        type: "integer"
+        format: "int64"
       - in: query
         name: nome
         type: string
@@ -82,6 +86,10 @@ paths:
           description: success
           schema:
             $ref: '#/definitions/getUsuariosResponse'
+        "204":
+          description: nocontent
+          schema:
+            $ref: '#/definitions/noContentResponse'
         "403":
             description: Acesso Negado
             schema: 
@@ -342,6 +350,11 @@ definitions:
   #   enum: [ ..., ... ]
   
   # common #
+  noContentResponse:
+    type: object
+    properties:
+      data:
+        type: object
   errorResponse:
     type: object
     properties:
